; ModuleID = '/home/carl/AnghaBench/htop/openbsd/extr_OpenBSDProcessList.c_getpcpu.c'
source_filename = "/home/carl/AnghaBench/htop/openbsd/extr_OpenBSDProcessList.c_getpcpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kinfo_proc = type { i32 }

@fscale = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @getpcpu(%struct.kinfo_proc* %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca %struct.kinfo_proc*, align 8
  store %struct.kinfo_proc* %0, %struct.kinfo_proc** %3, align 8
  %4 = load i64, i64* @fscale, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store double 0.000000e+00, double* %2, align 8
  br label %16

7:                                                ; preds = %1
  %8 = load %struct.kinfo_proc*, %struct.kinfo_proc** %3, align 8
  %9 = getelementptr inbounds %struct.kinfo_proc, %struct.kinfo_proc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sitofp i32 %10 to double
  %12 = load i64, i64* @fscale, align 8
  %13 = sitofp i64 %12 to double
  %14 = fdiv double %11, %13
  %15 = fmul double 1.000000e+02, %14
  store double %15, double* %2, align 8
  br label %16

16:                                               ; preds = %7, %6
  %17 = load double, double* %2, align 8
  ret double %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
